# storage-crab-desktop

./: .env  CMakeLists.txt  Cargo.toml  LICENSE
forms/: login_window.ui  uploaded_file_panel.ui  user_dashboard.ui
include/: api.h  requests.hpp  token_pair.h  user_dashboard.h
include/utils/: styles_loader.hpp
include/widgets/: uploaded_file_panel.h
include/windows/: login_window.h  user_dashboard.h
migrations/: 0001_users_table.sql
src/: auth_services.rs  jwt_token_pair.rs  login_window.cpp  main.cpp  main.rs  token_pair.cpp  uploaded_file_panel.cpp  user_dashboard.cpp
styles/: basic_button.css  delete_button.css  upload_button.css
